vertical align fix

--- a/css/airlines.css
+++ b/css/airlines.css
@@ -759,17 +759,22 @@
 }
 .faq .left ul li {
   height: 100px;
+  width: 279px;
   cursor: pointer;
-  display: block;
   position: relative;
+  display: table;
+  overflow: hidden;
 }
-.faq .left ul li h3 {
+.faq .left ul li div {
+  padding: 0 0 0 70px;
+  display: table-cell;
+  vertical-align: middle;
+}
+.faq .left ul li div h3 {
   width: 165px;
-  padding: 25px 0 0 70px;
   margin: 0 0 3px;
 }
-.faq .left ul li p {
-  padding: 0 0 0 70px;
+.faq .left ul li div p {
   margin: 0;
   color: #828282;
   font-size: 13px;
@@ -795,9 +800,6 @@
 }
 .faq .left ul li i.faq-icon-refresh {
   background-image: url('../static/faq-icon-refresh.png');
-}
-.faq .left ul li:nth-of-type(2) h3 {
-  padding-top: 15px;
 }
 .faq .left ul li.active {
   background: url(../images/bg-faq-menu-active.png) no-repeat;
